bluec-tests/tests/invalid/types_fn_pointer/assign_int_to_fn_pointer.c
int main(void) {
    int (*fn)(void);
    fn = 10;
    return 0;
}